# bga-cartography

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/admin/: auth.py  maps.py
backend/app/api/public/: discord.py  maps.py
backend/app/core/: auth.py  config.py
backend/app/data/: store.py
backend/app/schemas/: maps.py
docs/: index.html
docs/assets/: index-Bs_e6cwt.css  index-C3NzWelI.js  index-CRtnrmoZ.js
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  main.tsx
frontend/src/components/: MapSidebar.tsx  TopBar.tsx
frontend/src/features/auth/: AuthProvider.tsx  LoginModal.tsx
frontend/src/features/maps/: MapWorkspace.tsx  OpenLayersMap.tsx  sampleData.ts
frontend/src/features/timeline/: TimelinePanel.tsx
frontend/src/services/: api.ts
frontend/src/styles/: theme.css
frontend/src/types/: models.ts
