[project]
name = "bga-cartography-backend"
version = "0.1.0"
description = "FastAPI backend for the BGA Cartography prototype"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.5,<1.0.0",
  "pydantic-settings>=2.6.1,<3.0.0",
  "python-multipart>=0.0.12,<0.1.0",
  "uvicorn[standard]>=0.32.0,<0.33.0"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
